// Messages for underlays.

syntax = "proto3";

package bio.terra.tanagra.underlay;
option java_package = "bio.terra.tanagra.proto.underlay";
option java_multiple_files = true;

import "bio/terra/tanagra/underlay/entities.proto";
import "bio/terra/tanagra/underlay/hierarchy.proto";
import "bio/terra/tanagra/underlay/indexing.proto";
import "bio/terra/tanagra/underlay/mapping.proto";
import "bio/terra/tanagra/underlay/search.proto";
import "bio/terra/tanagra/underlay/tables.proto";
import "bio/terra/tanagra/underlay/textsearch.proto";

// The description of an underlay.
message Underlay {
  // The name of the underlay.
  string name = 1;

  // The entities that make up this underlay.
  repeated Entity entities = 2;
  // The relationships between entities in this underlay.
  repeated Relationship relationships = 3;

  // The datasets that make up the physical construction of the underlay.
  repeated Dataset datasets = 4;

  // Every entity in an underlay must have a mapping.
  repeated EntityMapping entity_mappings = 5;
  // Every attribute in an underlay must have a mapping.
  repeated AttributeMapping attribute_mappings = 6;
  // Every relationship in an underlay must have a mapping.
  repeated RelationshipMapping relationship_mappings = 7;

  // The hierarchies for attributes with hierarchies in the underlay.
  repeated Hierarchy hierarchies = 9;

  // The text search information for entities in the underlay.
  repeated TextSearchInformation text_search_information = 10;

  // The entity filters available on this underlay.
  repeated EntityFiltersSchema entity_filters_schemas = 8;

  // The entity indexing in the underlay.
  repeated EntityIndexing entity_indexing = 11;
}
